--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=citasmedicas
 spring.datasource.password=spring
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 logging.level.root=WARN
 server.port=5000
