Arreglo relación ManyToMany. Añadido GET en controller de pacientes y medicos en MedicoController y PacienteController respectivamente.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=create
 logging.level.root=WARN
 server.port=5000
+spring.main.allow-circular-references=true
